SunSkycodepkg/objects/SunSky_Defects__c.object
<CustomObject>
    <description>Defects track the defects and issues associated with particular build components.</description>
    <fields>
        <fullName>SunSky_Build_Component__c</fullName>
        <description>The build component the defect is related to.</description>
        <label>SunSky Build Component</label>
        <referenceTo>SunSky_Build_Component__c</referenceTo>
        <relationshipName>SunSky_Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Defect_Description__c</fullName>
        <description>Describe the details of the defect related to the build component.</description>
        <label>Defect Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Reported_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact who reported the defect.</description>
        <label>Defect Reported By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SunSky_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect_Status__c</fullName>
        <description>The status of the defect or issue associated with the build component.</description>
        <label>Defect Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Retest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected to Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect Resolved/Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Summary__c</fullName>
        <description>Summary of the defect related to the build component.</description>
        <label>Defect Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact to respond to technical questions related to the defect.</description>
        <label>Defect Technical Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SunSky_Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect_Type__c</fullName>
        <description>The category of the defect.</description>
        <label>Defect Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tool Defect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SunSky_Build_Component__c</columns>
        <columns>Defect_Description__c</columns>
        <columns>Defect_Status__c</columns>
        <columns>Defect_Summary__c</columns>
        <columns>Defect_Type__c</columns>
        <columns>Defect_Reported_By_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEF-{000000}</displayFormat>
        <label>SunSky Defects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>